# indoor-localization

./: .gitignore  .gitmodules  README.md
code/basestation/: .gitignore  CMakeLists.txt  basestation_server.cpp  data_converter.cpp  data_converter.h  serial.cpp  serial_reader.cpp  server.cpp  server.h
code/basestation/include/: basestation_server.h  data_converter.h  serial_reader.h
code/basestation/test/: CMakeLists.txt  test_converter.cpp
code/central/: .gitignore  CMakeLists.txt  client.cpp  main.cpp
code/central/include/: client.h
code/centralstation/: .gitignore
code/centralstation/src/map_publisher/: CMakeLists.txt  package.xml
code/centralstation/src/map_publisher/launch/: map_server.launch
code/centralstation/src/map_publisher/yaml/: map.yaml
code/centralstation/src/measurement_debugger/: CMakeLists.txt  package.xml
code/centralstation/src/measurement_debugger/launch/: debugger.launch
code/centralstation/src/measurement_debugger/src/: basestation.py  circumference_publisher.py  debug_node.py
code/centralstation/src/poller/: CMakeLists.txt  package.xml
code/centralstation/src/poller/launch/: poller.launch
code/centralstation/src/poller/msg/: Measurement.msg  MeasurementList.msg
code/centralstation/src/poller/src/: basestation.py  client.py  json_handler.py  json_verifier.py  orderedset.py  poller.py  poller_node.py
code/centralstation/src/position_publisher/: CMakeLists.txt  package.xml
code/centralstation/src/position_publisher/launch/: debugged_tracker.launch  tracker.launch
code/centralstation/src/position_publisher/src/: basestation.py  basestation_selector.py  circumference_publisher.py  debugged_basestation.py  debugged_ekf.py  debugged_localization_node.py  ekf.py  json_extractor.py  localization_node.py  measurement_exception.py  model.py  position_covariance.py  ros_ekf.py
code/client_python/: .gitignore  __init__.py  basestation.py  client.py  ekf.py  json_extractor.py
code/client_python/src/position_publisher/: CMakeLists.txt  package.xml
code/client_python/src/position_publisher/src/: beacon_selector.py  ekf.py  localization_node.py  matrix_operations.py  model.py
documents/: manual.tex
matlab_model/: ekf_correction.m  ekf_prediction.m  ekf_tracking.m  ekf_tracking_polling.m  extract_distance_with_polling_delay.m  generate_measurements.m  initilize_position.m  main.m  plot_walls.m  position_selector.m  selective_extraction.m
matlab_model/beacon-data/: data_extracted.m  data_measured.m  final-distance-sampling-model-full.mat  results.txt  rssi-to-space-poly3.sfit  space-to-rssi-poly2.sfit  space-to-rssi-poly3-meters.sfit  space-to-rssi-poly3.sfit  space-to-rssi-whole_data-exp2.sfit  space-to-rssi-whole_data-poly3.sfit  weight_function_generator.m  weight_measurement.sfit
matlab_model/velocity_estimation/: trajectory.txt  velocity_calculator.cpp
report/: report.md
